--- a/source/_includes/post/post_list.html
+++ b/source/_includes/post/post_list.html
@@ -17,5 +17,5 @@
   </div>
   {% endif %}
   {% endif %}
-  <a class="click_box_link" href="{{ root_url }}{{ post.url }}">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a>{%if site.page-view.show_views and post._pv %}<br><span class="views">{{post._pv}} views</span>{%endif%}
+  <a class="click_box_link" href="{{ root_url }}{{ post.url }}">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a>
 </div>
