--- a/source/_includes/post/post_list.html
+++ b/source/_includes/post/post_list.html
@@ -1,14 +1,18 @@
+{% capture root_url %}{{ site.root | strip_slash }}{% endcapture %}
 <div class="group">
   {% if post.ogimage and post.no_ogimage != true %}
+  ogimage
   <div class="title-small-thumbnail">
-    <a href="{{ post.url }}">{%thumbnail small-thumbnail val:post.ogimage%}</a>
+    <a href="{{ root_url }}{{ post.url }}">{%thumbnail small-thumbnail val:post.ogimage%}</a>
   </div>
   {% else %}
+  ogimage
   {%capture postimg%}{{ post.content | amazon_img }}{%endcapture%}
   {% if postimg == "" %}
   {% if site.sitelogo %}
   <div class="title-small-thumbnail">
-    <a href="{{ post.url }}">{%thumbnail small-thumbnail val:site.sitelogo%}</a>
+  n-
+    <a href="{{ root_url }}{{ post.url }}">{%thumbnail small-thumbnail val:site.sitelogo%}</a>
   </div>
   {% endif %}
   {% else %}
@@ -17,5 +21,5 @@
   </div>
   {% endif %}
   {% endif %}
-  <a class="click_box_link" href="{{ post.url }}">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a>
+  <a class="click_box_link" href="{{ root_url }}{{ post.url }}">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a>
 </div>
